# grass_datetime_standalone

./: .gitignore  CMakeLists.txt  PYTHON_INSTALL.md  PYTHON_WRAPPER.md  README.md  TESTING_SUMMARY.md  build.bat  build.sh  compile_test.bat  examples.py  grass_datetime.py  test_datetime.c
include/grass/defs/: datetime.h
lib/datetime/: CMakeLists.txt
python/: README.md  __init__.py  _grass_datetime_cffi.c  cdef_generation_methods.py  cffi_config.ini  config_cdef_generator.py  demo.py  direct_test.py  generate_cdef.py  grass_datetime.py  grass_datetime_build.py  grass_datetime_build_v2.py  high_level_demo.py  path_demo.py  requirements.txt  setup.py  simple_examples.py  test_demo.py  test_direct.py  test_python_wrapper.py
